Before branch into CA report

--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,7 @@
 \addpart{Part I\@: Formalization of Coq Modules}
 \pagelayout{margin} % Restore margins
 
+\include{chapters/proof-assistants-intro}
 \include{chapters/mc-intro}
 \include{chapters/coqmod}
 
@@ -57,15 +58,13 @@
 
 \include{chapters/untyped}
 
-% \appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
+\appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
 
-% \pagelayout{wide} % No margins
-% \addpart{Appendix}
-% \pagelayout{margin} % Restore margins
+\pagelayout{wide} % No margins
+\addpart{Appendix}
+\pagelayout{margin} % Restore margins
 
-% \chapter{Some more blindtext}
-
-% \blindtext
+\include{chapters/appendix-specs}
 
 %----------------------------------------------------------------------------------------
 
