--- a/styles/layout.sty
+++ b/styles/layout.sty
@@ -16,7 +16,7 @@
 % % % Reset the mathcal and blackboard bold to the ones from computer modern
 % \DeclareMathAlphabet{\mathcal}{OMS}{cmsy}{m}{n}
 % \setmathfont{Latin Modern Math}[Scale=MatchUppercase,ScaleAgain=1.07,range=bb]
-\usepackage{libertinus}
+% \usepackage{libertinus}
 \usepackage[T1]{fontenc}
 
 %% Colors
@@ -50,3 +50,4 @@
 % Misc
 
 \usepackage{comment}
+\usepackage{minted}
