CA ready to submit (without appendix)

--- a/main.bib
+++ b/main.bib
@@ -101,3 +101,82 @@ articleno = {8},
 numpages = {28},
 keywords = {type checker, certification, proof assistants}
 }
+
+@article{DBLP:journals/corr/BauerGLSSS16,
+  author    = {Andrej Bauer and
+               Jason Gross and
+               Peter LeFanu Lumsdaine and
+               Michael Shulman and
+               Matthieu Sozeau and
+               Bas Spitters},
+  title     = {The HoTT Library: {A} formalization of homotopy type theory in Coq},
+  journal   = {CoRR},
+  volume    = {abs/1610.04591},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1610.04591},
+  eprinttype = {arXiv},
+  eprint    = {1610.04591},
+  timestamp = {Mon, 13 Aug 2018 16:48:11 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/BauerGLSSS16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{jung2018iris,
+  title={Iris from the ground up: A modular foundation for higher-order concurrent separation logic},
+  author={Jung, Ralf and Krebbers, Robbert and Jourdan, Jacques-Henri and Bizjak, Ale{\v{s}} and Birkedal, Lars and Dreyer, Derek},
+  journal={Journal of Functional Programming},
+  volume={28},
+  year={2018},
+  publisher={Cambridge University Press}
+}
+
+@article{barendregt1992lambda,
+  title={Lambda calculi with types},
+  author={Barendregt, Henk P},
+  year={1992},
+  publisher={Oxford: Clarendon Press}
+}
+
+@book{girard1989proofs,
+  title={Proofs and types},
+  author={Girard, Jean-Yves and Taylor, Paul and Lafont, Yves},
+  volume={7},
+  year={1989},
+  publisher={Cambridge university press Cambridge}
+}
+
+@phdthesis{coquand1986calculus,
+  title={The calculus of constructions},
+  author={Coquand, Thierry and Huet, G{\'e}rard},
+  year={1986},
+  school={INRIA}
+}
+
+@misc{pcuic2017timany,
+  doi = {10.48550/ARXIV.1710.03912},
+  
+  url = {https://arxiv.org/abs/1710.03912},
+  
+  author = {Timany, Amin and Sozeau, Matthieu},
+  
+  keywords = {Programming Languages (cs.PL), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Consistency of the Predicative Calculus of Cumulative Inductive Constructions (pCuIC)},
+  
+  publisher = {arXiv},
+  
+  year = {2017},
+  
+  copyright = {Creative Commons Attribution Share Alike 4.0 International}
+}
+
+@article{sozeau2020metacoq,
+  title={The metacoq project},
+  author={Sozeau, Matthieu and Anand, Abhishek and Boulier, Simon and Cohen, Cyril and Forster, Yannick and Kunze, Fabian and Malecha, Gregory and Tabareau, Nicolas and Winterhalter, Th{\'e}o},
+  journal={Journal of automated reasoning},
+  volume={64},
+  number={5},
+  pages={947--999},
+  year={2020},
+  publisher={Springer}
+}
