--- a/main.tex
+++ b/main.tex
@@ -73,14 +73,14 @@
 % \addpart{Part II\@: Decidability of Conversion in MLTT}
 % \pagelayout{margin} % Restore margins
 
-\appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
+% \appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
 
-\pagelayout{wide} % No margins
-\addpart{Appendix}
-\pagelayout{margin} % Restore margins
+% \pagelayout{wide} % No margins
+% \addpart{Appendix}
+% \pagelayout{margin} % Restore margins
 
-\include{chapters/appendix/module-typing.tex}
-\include{chapters/appendix/untyped.tex}
+% \include{chapters/appendix/module-typing.tex}
+% \include{chapters/appendix/untyped.tex}
 
 %----------------------------------------------------------------------------------------
 
