Commit post-imprs presentation

--- a/ca-report/main.tex
+++ b/ca-report/main.tex
@@ -35,7 +35,6 @@
 
 
 \begin{document}
-
 \include{chapters/header}
 
 %----------------------------------------------------------------------------------------
@@ -73,13 +72,13 @@
 % \addpart{Part II\@: Decidability of Conversion in MLTT}
 % \pagelayout{margin} % Restore margins
 
-% \appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
+\appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
 
-% \pagelayout{wide} % No margins
-% \addpart{Appendix}
-% \pagelayout{margin} % Restore margins
+\pagelayout{wide} % No margins
+\addpart{Appendix}
+\pagelayout{margin} % Restore margins
 
-% \include{chapters/appendix/module-typing.tex}
+\include{chapters/appendix/module-typing.tex}
 % \include{chapters/appendix/untyped.tex}
 
 %----------------------------------------------------------------------------------------
