--- a/ca-report/styles/layout.sty
+++ b/ca-report/styles/layout.sty
@@ -13,11 +13,11 @@
 % \newfontfamily\checksymbol{DejaVu Sans} % because the checkmark is missing is Libertinus
 
 % \setmathfont{Libertinus Math}[Scale=MatchLowercase]
-% % % Reset the mathcal and blackboard bold to the ones from computer modern
+% % Reset the mathcal and blackboard bold to the ones from computer modern
 % \DeclareMathAlphabet{\mathcal}{OMS}{cmsy}{m}{n}
 % \setmathfont{Latin Modern Math}[Scale=MatchUppercase,ScaleAgain=1.07,range=bb]
 % \usepackage{libertinus}
-\usepackage[T1]{fontenc}
+% \usepackage[T1]{fontenc}
 
 %% Colors
 
@@ -51,3 +51,4 @@
 
 \usepackage{comment}
 \usepackage{minted}
+\usepackage{mathpartir}
