Final submission: links to repo tags

--- a/final-report-new/01-introduction.tex
+++ b/final-report-new/01-introduction.tex
@@ -124,7 +124,10 @@ in Coq, called the Modular Environment rewrite that solves various problems that
 surfaced from the initial implementation. Finally, Chapter \ref{ch:machineries}
 will document the skill acquired in writing formal proofs in Coq during the
 implementation of the project. This report will end with possible future work in
-Chapter \ref{ch:future}.
+Chapter \ref{ch:future}. The first implementation and the draft for the second
+can be found on \url{https://github.com/SwampertX/metacoq/tree/fyp-first-impl}
+and \url{https://github.com/SwampertX/metacoq/releases/tag/fyp-second-impl}
+respectively.
 % while some technical details, such as concrete typing rules
 % % , and some type-theoretic results I studied as a joint
 % % thesis with the Mathematics Department
