--- a/final-report-new/05-modular.tex
+++ b/final-report-new/05-modular.tex
@@ -77,7 +77,9 @@ It would be natural to unify modules and environments into a single structure
 ambient, top-level module, thus just a special case of a module. Under this
 generalization, any well-formedness properties or well-typedness properties
 about environments should be subsumed under modules, thus giving us a good sense
-when defining the typing rules for modules.
+when defining the typing rules for modules. A draft implementation of the rest
+of the code listings can be found on
+\url{https://github.com/SwampertX/metacoq/releases/tag/fyp-second-impl}.
 
 \subsection{Definition of the Data Structure}
 Let us begin by defining modules, then specialize into global declarations.
